[package]
name = "database-common-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = ">=2.0.12"
anyhow = ">=1.0.97"
actix-web = ">=4.9.0"
actix-files = ">=0.6.6"
vite-actix = ">=0.1.2"
sqlx = { version = ">=0.8.3", features = ["mysql"] }
reqwest = { version = ">=0.12.12", features = ["json"] }
log = ">=0.4.26"
include_dir = ">=0.7.4"
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"