[package]
name = "database-common-lib"
version = "0.1.5"
edition = "2024"

[dependencies]
thiserror = ">=2"
anyhow = ">=1.0.8"
actix-web = ">=4.9.0"
actix-files = ">=0.6.6"
vite-actix = { git = "https://github.com/Drew-Chase/vite-actix.git" }
sqlx = { version = ">=0.8", features = ["mysql", "macros", "sqlx-macros"] }
reqwest = { version = ">=0.12", features = ["json"] }
log = ">=0.4"
include_dir = ">=0.7"
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
tokio = { version = ">=1", features = ["macros", "rt-multi-thread"] }
